src/test/deca/context/valid/print_evoluer.deca
// Description:
//    print  couvre pas mal de chose 
//
// Resultats:
//    
// 
// Historique:
//    cree le 07/01/2025

{
    print();
    println(3 + "d" + 3.0);
}
