src/test/deca/context/invalid/class_pass2_7.deca
// Description:
//    test minimaliste pour induire a l erreur lors du pass 2 (declaration de parametre void)
//
// Resultats:
// erreur
//
//
// Historique:
//    cree le 14/01/2025



class B {
    void p(void a){}
}

